--- a/SolarCoffee.Web/appsettings.json
+++ b/SolarCoffee.Web/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "solar.dev": "Host=localhost;Port=5432;Database=solardev;Username=solardev;Password=solar123;"
+    },
+    "AllowedHosts": "*"
 }
